@@ -5,6 +5,7 @@
 	(dfsch_string_utf8_length): Fixed bad constant
 	(dfsch_string_utf8_ref): string-ref for utf-8 strings
 	(dfsch_string_utf8_substring): substring for utf-8 strings
+	Better handling of invalid bytes and sequences in utf-8
 
 2006-02-09  Ales Hakl  <ales at hakl dot net>
 
